--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,5 +1,5 @@
 
-{% extends "forum/base.html" %}
+{% extends "chat/base.html" %}
 {% block content %}
 <div class="container">
 	<div class="jumbotron">
