--- a/users/templates/users/password_reset_complete.html
+++ b/users/templates/users/password_reset_complete.html
@@ -1,4 +1,4 @@
-{% extends "forum/base.html" %}
+{% extends "chat/base.html" %}
 {% block content %}
 <div class="container">
     <div class="jumbotron">
