--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -4,6 +4,17 @@
 	<div class="jumbotron">
 		<h1>{{ title }}</h1>
 		<p>Simplechat [chat_view]</p>
+		{% for post in chat_context %}
+		<div class="media">
+			<div class="media-left">
+				<div class="media-body">
+					<div class="well well-sm">
+						<p class="article-content">{{ post.content | safe }}</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		{% endfor %}
 	</div>
 </div>
 {% endblock content %}
