--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -15,6 +15,7 @@
 			<div class="form-group">
 				<button class="btn btn-success btn-sm mt-1 mb-1" type="submit">Submit</button>
 				<a class="btn btn-primary btn-sm mt-1 mb-1" href="javascript:history.go(-1)">Back</a>
+				<a class="btn btn-primary btn-sm mt-1 mb-1" href="{% url 'chat-view' %}">Reload</a>
 			</div>
 		</form>
 		<br>
