--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -20,9 +20,10 @@
 		</form>
 		<br>
 		{% for post in chat_context %}
-			<div class="well well-sm">
-				<p class="article-content">{{ post.content | safe }}</p>
+			<div class="row">
+				<div class="col-sm-8" style="background-color:lavender;">{{ post.content | safe }}</div>
 			</div>
+			<br> 
 		{% endfor %}
 	</div>
 </div>
