--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -20,14 +20,18 @@
 		</form>
 		<br>
 		{% for post in chat_context %}
-		{% if post.author == user %}
-			<p>[Users post]</p>
-		{% else %}
-			<div class="row">
-				<div class="col-sm-8" style="background-color:lavender;">{{ post.content | safe }}</div>
-			</div>
-		{% endif %}
-		<br> 
+			{% if post.author == user %}
+					<div class="row">
+						<div class="col-sm-2"> </div>
+						<div class="col-sm-8" style="background-color:rgb(250, 230, 236);">{{ post.content | safe }}</div>
+					</div>
+					<br>
+			{% else %}
+				<div class="row">
+					<div class="col-sm-8" style="background-color:rgb(230, 230, 250);">{{ post.content | safe }}</div>
+				</div>
+				<br>
+			{% endif %}
 		{% endfor %}
 	</div>
 </div>
