--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -33,7 +33,12 @@
 				<br>
 			{% else %}
 				<div class="row">
-					<div class="col-sm-8" style="background-color:rgb(230, 230, 250);">{{ post.content | safe }}</div>
+					<div class="col-sm-8" style="background-color:rgb(230, 230, 250);">
+						<small class="text-muted" >{{ post.post_type }}</small>
+						<small class="text-muted">{{ post.date_posted|date:"H:i d, m, Y" }}</small>
+						<a class="mr-2" href="#">{{ post.author }}</a>
+						{{ post.content | safe }}
+					</div>
 				</div>
 				<br>
 			{% endif %}
