--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -28,6 +28,7 @@
 						<small class="text-muted">{{ post.date_posted|date:"H:i d, m, Y" }}</small>
 						<a class="mr-2" href="#">{{ post.author }}</a>
 						{{ post.content | safe }}
+						<a class="mr-2" href="#">Update</a>
 					</div>
 				</div>
 				<br>
