--- a/chat/templates/chat/edit_chat.html
+++ b/chat/templates/chat/edit_chat.html
@@ -9,7 +9,8 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Chat {{ title}}<br><br> </legend>
+                <legend class="border-bottom mb-4">Chat {{ title}} </legend>
+                <br><br>
                 {{ form.media }}
                 {{ form.as_p }}
             </fieldset>
