--- a/chat/templates/chat/edit_chat.html
+++ b/chat/templates/chat/edit_chat.html
@@ -9,8 +9,7 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Chat {{ title}} </legend>
-                <br><br>
+                <legend class="border-bottom mb-4">Chat: {{ title}} </legend>
                 {{ form.media }}
                 {{ form.as_p }}
             </fieldset>
