--- a/chat/templates/chat/user_info.html
+++ b/chat/templates/chat/user_info.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container">
 	<div class="jumbotron">
-		<h1>{{ title }}</h1>
+		<h1>{{ title_page }}</h1>
 		<img src="{{ object.author.profile.image.url }}" class="special-img" style="width:300px">
 		<br><br>
 		<ul class="list-group" style="width:300px">
