--- a/chat/templates/chat/chat_edit.html
+++ b/chat/templates/chat/chat_edit.html
@@ -17,7 +17,7 @@
             <div class="form-group">
                 <button class="btn btn-success btn-sm mt-1 mb-1" type="submit">Update</button>
                 <a class="btn btn-primary btn-sm mt-1 mb-1" href="javascript:history.go(-1)">Back</a>
-                <a class="btn btn-danger btn-sm mt-1 mb-1" href="#">Delete</a>
+                <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'chat_delete' object.id %}">Delete</a>
             </div>
         </form>
     </div>
