--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container">
 	<div class="jumbotron">
-		<h1>{{ title }}</h1>
+		<h1>{{ title_page }}</h1>
 		<p>Simplechat</p>
 	</div>
 </div>
