--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -2,6 +2,8 @@
 {% block content %}
 <div class="container">
 	<div class="jumbotron">
+		<button onclick="jsonChat()">Test jsonChat</button>
+		<script>
 		</script>
 		<h1>{{ title_page }}</h1>
 		<form method="POST">
