--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -18,6 +18,10 @@
 					alert(instance);
 					var fields = instance[3]["content"];
 					alert(fields);
+					var fields2 = instance[3];
+					alert(fields2);
+					var fields = fields2["id"];
+					alert(fields);
 					var fields = instance[3]["id"];
 					alert(fields);
 					
