--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -19,11 +19,12 @@
 					var fields = instance[3];
 					var fields2 = fields["content"];
 					alert(fields2);
-					var fields3 = fields["id"];
-					alert(fields3);
+					var fields3 = fields["author_id"];
+					alert(fields3)
 					$("#showdata tbody").prepend(
 					`
 					<div class="col-sm-12" style="background-color:rgb(250, 230, 236);">
+					${fields["post_type"]||""}
 					${fields["content"]||""}
 					</div>
 					`
