--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -23,8 +23,8 @@
 					var dateTime =  tmp_time + " " + tmp_date;
 					var fields2 = fields["content"];
 					alert(fields2);
-					var fields3 = fields["author_id"];
-					alert(fields3)
+					var fields3 = fields["author_name"];
+					alert(fields3);
 					$("#showdata tbody").prepend(
 					`
 					<div class="col-sm-12" style="background-color:rgb(250, 230, 236);">
