--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -23,21 +23,20 @@
 					var dateTime =  tmp_time + " " + tmp_date;
 					var fields2 = fields["content"];
 					alert(fields2);
-					var fields3 = fields["author_name"];
+					var fields3 = fields["author_id"];
 					alert(fields3);
 					$("#showdata tbody").prepend(
-					`
-						<div class="col-sm-12" style="background-color:rgb(250, 249, 230);">
-							${fields["post_type"]||""}
-							${dateTime||""}
-							${fields["author_name"]||""}
-						</div>
-						<div class="col-sm-12" style="background-color:rgb(250, 230, 236);">
-							${fields["content"]||""}
-						</div>
-					`
-					
-					)
+						`
+							<div class="col-sm-12" style="background-color:rgb(250, 249, 230);">
+								${fields["post_type"]||""}
+								${dateTime||""}
+								<a class="mr-2" href="../${fields["author_id"]||""}/user_info/">${fields["author_name"]||""}</a>
+							</div>
+							<div class="col-sm-12" style="background-color:rgb(250, 230, 236);">
+								${fields["content"]||""}
+							</div>
+						`
+						)
 					
 					//alert('{{ user.id }}');
 
