--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -30,7 +30,8 @@
 							<div class="col-sm-12" style="background-color:rgb(250, 249, 230);">
 								${fields["post_type"]||""}
 								${dateTime||""}
-								<a class="mr-2" href="../${fields["author_id"]||""}/user_info/">${fields["author_name"]||""}</a>
+								<a class="mr-2" href="../${fields["author_id"]||""}/user_info/">
+									${fields["author_name"]||""}</a>
 							</div>
 							<div class="col-sm-12" style="background-color:rgb(250, 230, 236);">
 								${fields["content"]||""}
