--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -32,7 +32,7 @@
 								<div class="col-sm-12" style="background-color:rgb(250, 230, 236);">
 									${fields["content"]||""}
 								</div>
-								<div>.</div>
+								<div>-</div>
 							`
 							)
 					
