--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -21,7 +21,8 @@
 						var tmp_date = new Date(dateRaw).toJSON().slice(0,10).split('-').reverse().join(',');
 						var tmp_time = new Date(dateRaw).toJSON().slice(11,19);
 						var dateTime =  tmp_time + " " + tmp_date;
-						$("#showdata tbody").prepend(
+						if (fields["author_id"] == '{{ user.id }}') {
+							$("#showdata tbody").prepend(
 							`
 								<div class="col-sm-12" style="background-color:rgb(250, 249, 230);">
 									${fields["post_type"]||""}
@@ -35,6 +36,8 @@
 								<div>-</div>
 							`
 							)
+						}
+
 					
 					//alert('{{ user.id }}');
 
