--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -36,6 +36,21 @@
 									<div></div>
 								`
 								)
+							} else {
+								$("#showdata tbody").prepend(
+									`
+										<div class="col-sm-12" style="background-color:rgb(250, 249, 230);">
+											${fields["post_type"]||""}
+											${dateTime||""}
+											<a class="mr-2" href="../${fields["id"]||""}/user_info/">
+											${fields["author_name"]||""}</a>
+										</div>
+										<div class="col-sm-12" style="background-color:rgb(230, 230, 250);">
+											${fields["content"]||""}
+										</div>
+										<div></div>
+									`
+								)
 							}
 					
 						}
