--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -29,6 +29,7 @@
 										${dateTime||""}
 										<a class="mr-2" href="../${fields["id"]||""}/user_info/">
 										${fields["author_name"]||""}</a>
+										<a class="mr-2" href="../${fields["id"]||""}/update/">Update</a>
 									</div>
 									<div class="col-sm-12" style="background-color:rgb(250, 230, 236);">
 										${fields["content"]||""}
