--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -2,9 +2,7 @@
 {% block content %}
 <div class="container">
 	<div class="jumbotron">
-		<button onclick="jsonChat()">Test jsonChat</button>
 		<script>
-			//Testing JsonResponse
 			function jsonChat() {
 			$.ajax({
 				method: 'POST',
@@ -76,7 +74,7 @@
 			<div class="form-group">
 				<button class="btn btn-success btn-sm mt-1 mb-1" type="submit">Submit</button>
 				<a class="btn btn-primary btn-sm mt-1 mb-1" href="javascript:history.go(-1)">Back</a>
-				<a class="btn btn-primary btn-sm mt-1 mb-1" href="{% url 'chat-view' %}">Reload</a>
+				<a class="btn btn-primary btn-sm mt-1 mb-1" onclick="jsonChat()">Reload</a>
 			</div>
 		</form>
 		<br>
