--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -14,7 +14,7 @@
 				success: function(response) {
 					var instance = response['chat_context'];
 					$('tbody').empty();
-					for (let i = 0; i < instance.length; i++) {
+					for (let i = instance.length-1; i => 0; i--) {
 						var fields = instance[i];
 						var dateRaw = fields["date_posted"]; //Format Date and time
 						var tmp_date = new Date(dateRaw).toJSON().slice(0,10).split('-').reverse().join(',');
