--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -3,6 +3,7 @@
 <div class="container">
 	<div class="jumbotron">
 		<script>
+			setTimeout(jsonChat, 500);
 			function jsonChat() {
 			$.ajax({
 				method: 'POST',
