--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -16,6 +16,17 @@
 				success: function(response) {
 					var instance = response['chat_context'];
 					$('tbody').empty();
+					$("#pagination tbody").prepend(
+						`
+						<span class="step-links">
+							<span class="current">
+								Page ${response['page_number']||""} of 
+									${response['num_of_pages']||""}
+							</span>
+						</span>
+
+						`
+					)
 					for (let i = instance.length-1; i => 0; i--) {
 						var fields = instance[i];
 						var dateRaw = fields["date_posted"]; //Format Date and time
@@ -59,7 +70,6 @@
   				
 					} 
 
-
 				})
 			};
 		</script>
@@ -85,6 +95,13 @@
 				
 			</tbody>
 		</table>
+		<table class="pagination" id="pagination">
+			<tbody>
+				
+			</tbody>
+		</table>
+        </div>	
+
 	</div>
 </div>
 {% endblock content %}
