--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -3,15 +3,17 @@
 <div class="container">
 	<div class="jumbotron">
 		<script>
-			setTimeout(jsonChat, 500);
-			function jsonChat() {
+			setTimeout(jsonChat, 500, 2);
+			var selected_page;
+			function jsonChat(sel_page) {
+			selected_page = sel_page;
 			$.ajax({
 				method: 'POST',
 				url: 'chat_json/',
 				dataType: 'json',        
 				data: {
 					csrfmiddlewaretoken : '{{ csrf_token }}',
-					page : 2 //test
+					page : sel_page
 					},
 				success: function(response) {
 					var instance = response['chat_context'];
@@ -86,7 +88,7 @@
 			<div class="form-group">
 				<button class="btn btn-success btn-sm mt-1 mb-1" type="submit">Submit</button>
 				<a class="btn btn-primary btn-sm mt-1 mb-1" href="javascript:history.go(-1)">Back</a>
-				<a class="btn btn-primary btn-sm mt-1 mb-1" onclick="jsonChat()">Reload</a>
+				<a class="btn btn-primary btn-sm mt-1 mb-1" onclick="jsonChat(sel_page = selected_page+1)">Reload</a>
 			</div>
 		</form>
 		<br>
