--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -18,17 +18,20 @@
 				success: function(response) {
 					var instance = response['chat_context'];
 					$('tbody').empty();
-					$("#pagination tbody").prepend(
-						`
-						<span class="step-links">
-							<span class="current">
-								Page ${response['page_number']||""} of 
-									${response['num_of_pages']||""}
+					if (response['page_number'] == 1){
+							$("#pagination tbody").prepend(
+							`
+							<span class="step-links">
+								<span class="current">
+									Page ${response['page_number']||""} of 
+										${response['num_of_pages']||""}
+								</span>
+								<a href="next-page" onclick="jsonChat(${response['page_number']||""}+1);return false;" >next</a>
+								<a href="last-page" onclick="jsonChat(${response['num_of_pages']||""});return false;" >last &raquo;</a>
 							</span>
-						</span>
-
-						`
-					)
+							`
+						)
+					}
 					for (let i = instance.length-1; i => 0; i--) {
 						var fields = instance[i];
 						var dateRaw = fields["date_posted"]; //Format Date and time
