--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -18,7 +18,7 @@
 				success: function(response) {
 					var instance = response['chat_context'];
 					$('tbody').empty();
-					if (response['page_number'] == 1){
+					if (response['page_number'] <= 1){
 							$("#pagination tbody").prepend(
 							`
 							<span class="step-links">
@@ -33,8 +33,23 @@
 							</span>
 							`
 						)
+					}else if (response['page_number'] >= response['num_of_pages']){
+						$("#pagination tbody").prepend(
+							`
+							<span class="step-links">
+								<a href="first-page" onclick="jsonChat(1);
+									return false;" >&laquo; first</a>
+								<a href="previous-page" onclick="jsonChat(${response['page_number']||""}-1);
+									return false;" >previous</a>
+								<span class="current">
+									Page ${response['page_number']||""} of 
+										${response['num_of_pages']||""}
+								</span>
+							</span>
+							`
+						)
 					}
-					for (let i = instance.length-1; i => 0; i--) {
+					for (let i = instance.length-1; i >= 0; i--) {
 						var fields = instance[i];
 						var dateRaw = fields["date_posted"]; //Format Date and time
 						var tmp_date = new Date(dateRaw).toJSON().slice(0,10).split('-').reverse().join(',');
