fix users settings

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -20,7 +20,7 @@
 						{{ form.email.errors }} <br><br>
 						<label>Email public:</label><br>
 						{{ p_form.email_public }}
-						{{ form.email.errors }} <br><br>
+						{{ p_form.email_public.errors }} <br><br>
 						<label>First name:</label><br>
 						{{ form.first_name }}<br><br>
 						<label>Last name:</label><br>
