--- a/chat/templates/chat/user_info.html
+++ b/chat/templates/chat/user_info.html
@@ -16,6 +16,8 @@
 			<li class="list-group-item">{{ object.author.profile.address}}</li>
 			<li class="list-group-item list-group-item-info"><b>Town:</b></li>
 			<li class="list-group-item">{{ object.author.profile.town}}</li>
+			<li class="list-group-item list-group-item-info"><b>Email public:</b></li>
+			<li class="list-group-item">{{ object.author.profile.email_public}}</li>
 			<li class="list-group-item list-group-item-info"><b>Date joined:</b></li>
 			<li class="list-group-item">{{ object.author.date_joined|date:'H:i d, m, Y' }}</li>
 			<li class="list-group-item list-group-item-info"><b>Date last login:</b></li>
