--- a/chat/templates/chat/chat_edit.html
+++ b/chat/templates/chat/chat_edit.html
@@ -10,7 +10,9 @@
             {% csrf_token %}
             <fieldset class="form-group">
                 <h1>{{ title_page }}</h1>
-                <p>{{ object.author }} posted at: {{ object.date_posted|date:'H:i d, m, Y'  }}.</p>
+                <p>{{ object.author }} posted at: {{ object.date_posted|date:'H:i d, m, Y'}}, edit at:
+                    {{ object.date_last_save|date:'H:i d, m, Y'}}.
+                </p>
                 {{ form.media }}
                 {{ form.as_p }}
             </fieldset>
