--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -29,14 +29,10 @@
 				success: function(response) {
 					var instance = response['chat_context'];
 					$('tbody').empty();
-					if (response['page_number'] <= 1){
+					if (response['page_number'] < response['num_of_pages']){
 							$("#pagination tbody").prepend(
 								`
 								<span class="step-links">
-									<span class="current">
-										Page ${response['page_number']||""} of 
-											${response['num_of_pages']||""}
-									</span>
 									<a href="next-page" onclick="jsonChat(${response['page_number']||""}+1);
 										return false;" >next</a>
 									<a href="last-page" onclick="jsonChat(${response['num_of_pages']||""});
@@ -44,7 +40,18 @@
 								</span>
 								`
 							)
-						} else if (response['page_number'] >= response['num_of_pages']){
+						} 
+					$("#pagination tbody").prepend(
+						`
+							<span class="step-links">
+								<span class="current">
+									Page ${response['page_number']||""} of 
+										${response['num_of_pages']||""}
+								</span>
+							</span>
+						`
+					)
+					 if (response['page_number'] > 1) {
 							$("#pagination tbody").prepend(
 								`
 								<span class="step-links">
@@ -52,34 +59,11 @@
 										return false;" >&laquo; first</a>
 									<a href="previous-page" onclick="jsonChat(${response['page_number']||""}-1);
 										return false;" >previous</a>
-									<span class="current">
-										Page ${response['page_number']||""} of 
-											${response['num_of_pages']||""}
-									</span>
 								</span>
 								`
 							)
-						} else {
-							$("#pagination tbody").prepend(
-								`
-								<span class="step-links">
-									<a href="first-page" onclick="jsonChat(1);
-										return false;" >&laquo; first</a>
-									<a href="previous-page" onclick="jsonChat(${response['page_number']||""}-1);
-										return false;" >previous</a>
-									<span class="current">
-										Page ${response['page_number']||""} of 
-											${response['num_of_pages']||""}
-									</span>
-									<a href="next-page" onclick="jsonChat(${response['page_number']||""}+1);
-										return false;" >next</a>
-									<a href="last-page" onclick="jsonChat(${response['num_of_pages']||""});
-										return false;" >last &raquo;</a>
-								</span>
-								`
-							)
-
 						}
+				
 					for (let i = instance.length-1; i >= 0; i--) {
 						var fields = instance[i];
 						var dateRaw = fields["date_posted"]; //Format Date and time
