--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -43,6 +43,12 @@
     <script>
       var w = window.innerWidth;
       var w_sw = 700; //switch width
+
+      function logoutConfirm () {
+        if (confirm('Logout?')) {
+          
+        }
+      }
     </script>
     <header class="site-header">
       <script>
