--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -23,6 +23,25 @@
       z-index: 9999;
       display: none;
     }
+    .modal {
+      text-align: center;
+    }
+
+    @media screen and (min-width: 768px) { 
+    .modal:before {
+      display: inline-block;
+      vertical-align: middle;
+      content: " ";
+      height: 100%;
+  }
+}
+
+    .modal-dialog {
+      display: inline-block;
+      text-align: left;
+      vertical-align: middle;
+    }
+    
 
     body {
       background-image: url('{% static "chat/bw-paper-g5eeefba0b_640.jpg" %}');
@@ -43,12 +62,6 @@
     <script>
       var w = window.innerWidth;
       var w_sw = 700; //switch width
-
-      function logoutConfirm () {
-        if (confirm('Logout?')) {
-          
-        }
-      }
     </script>
     <header class="site-header">
       <script>
@@ -66,7 +79,6 @@
             <script>
               if (w > w_sw) {
                   document.write("<li><a href='{% url 'chat-home' %}''>Home</a></li>");
-              }
             </script>
             <li><a href="{% url 'chat-view' %}">Chat</a></li>
           </ul>
@@ -82,6 +94,7 @@
             </script>
             <li><a href="logoutConfirm" onclick="logoutConfirm();return false;">
               <span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+              <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
             {% else %}
             <li><a href="{% url 'register' %}"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li><a href="{% url 'login' %}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
@@ -90,6 +103,24 @@
         </div>
       </nav>
     </header>
+    <!-- Modal -->
+    <div id="myModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Modal Header</h4>
+          </div>
+          <div class="modal-body">
+            <p>Some text in the modal.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-8">
