--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -117,7 +117,8 @@
             <p>Some text in the modal.</p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <a href="{% url 'logout' %}" class="btn btn-danger btn-sm mt-1 mb-1">Yes, Logout</a>
+            <button type="button" class="btn btn-primary btn-sm mt-1 mb-1" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
