--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -118,7 +118,7 @@
           </div>
           <div class="modal-footer">
             <a href="{% url 'logout' %}" class="btn btn-danger btn-sm mt-1 mb-1">Yes, Logout</a>
-            <button type="button" class="btn btn-primary btn-sm mt-1 mb-1" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary btn-sm mt-1 mb-1" data-dismiss="modal">Back</button>
           </div>
         </div>
       </div>
