--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -110,10 +110,10 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">Modal Header</h4>
+            <h4 class="modal-title">Logout?</h4>
           </div>
           <div class="modal-body">
-            <p>Some text in the modal.</p>
+            <p>Are you sure you want to logout?</p>
           </div>
           <div class="modal-footer">
             <a href="{% url 'logout' %}" class="btn btn-danger btn-sm mt-1 mb-1">Yes, Logout</a>
