--- a/chat/templates/chat/user_info.html
+++ b/chat/templates/chat/user_info.html
@@ -8,6 +8,8 @@
 		<ul class="list-group" style="width:300px">
 			<li class="list-group-item list-group-item-info"><b> Username:</b></li>
 			<li class="list-group-item">{{ object.author.username }}</li>
+			<li class="list-group-item list-group-item-info"><b> Nickname:</b></li>
+			<li class="list-group-item">{{ object.author.profile.nickname }}</li>
 			<li class="list-group-item list-group-item-info"><b>Fistname:</b></li>
 			<li class="list-group-item">{{ object.author.first_name }}</li>
 			<li class="list-group-item list-group-item-info"><b>Lastname:</b></li>
