--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -28,7 +28,7 @@
 					page : selected_page
 					},
 				success: function(response) {
-					var instance = response['chat_context'];
+					var instance_chat = response['chat_context'];
 					$('tbody').empty();
 					if (response['page_number'] < response['num_of_pages']) {
 							$("#pagination tbody").prepend(
@@ -65,8 +65,8 @@
 							)
 						}
 				
-					for (let i = instance.length-1; i >= 0; i--) {
-						var fields = instance[i];
+					for (let i = instance_chat.length-1; i >= 0; i--) {
+						var fields = instance_chat[i];
 						var dateRaw = fields['date_posted']; //Format Date and time
 						var tmp_date = new Date(dateRaw).toJSON().slice(0,10).split('-').reverse().join(',');
 						var tmp_time = new Date(dateRaw).toJSON().slice(11,19);
