--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -29,6 +29,7 @@
 					},
 				success: function(response) {
 					var instance_chat = response['chat_context'];
+					var instance_profile = response['user_profile'];
 					$('tbody').empty();
 					if (response['page_number'] < response['num_of_pages']) {
 							$("#pagination tbody").prepend(
