--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -73,6 +73,7 @@
 						var tmp_time = new Date(dateRaw).toJSON().slice(11,19);
 						var dateTime =  tmp_time + " " + tmp_date;
 						var author_name = 'Test-test';
+						var profile_id = fields['profile_id'];
 						if (fields['author_id'] == '{{ user.id }}') {
 							$("#showdata tbody").prepend(
 									`
