--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -74,6 +74,9 @@
 						var dateTime =  tmp_time + " " + tmp_date;
 						var author_name = 'Test-test';
 						var profile_id = fields['profile_id'];
+						for (let i = 0; i < instance_profile.length; i++) {
+							
+						}
 						if (fields['author_id'] == '{{ user.id }}') {
 							$("#showdata tbody").prepend(
 									`
