--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -75,7 +75,7 @@
 						var author_name = 'Test-test';
 						var profile_id = fields['profile_id'];
 						for (let i = 0; i < instance_profile.length; i++) {
-							
+							var fields_profile = instance_profile[i];
 						}
 						if (fields['author_id'] == '{{ user.id }}') {
 							$("#showdata tbody").prepend(
