--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -71,11 +71,11 @@
 						var tmp_date = new Date(dateRaw).toJSON().slice(0,10).split('-').reverse().join(',');
 						var tmp_time = new Date(dateRaw).toJSON().slice(11,19);
 						var dateTime =  tmp_time + " " + tmp_date;
-						var author_name = 'Test-test';
+						var author_name;
 						for (let i = 0; i < instance_profile.length; i++) {
 							var fields_profile = instance_profile[i];
 							if (fields_profile['user_id'] == fields['profile_id']) {
-
+								author_name = '|' + fields_profile['nickname']
 							}
 						}
 						if (fields['author_id'] == '{{ user.id }}') {
