--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -30,6 +30,7 @@
 				success: function(response) {
 					var instance_chat = response['chat_context'];
 					var instance_profile = response['user_profile'];
+					var instance_users = response['user_s'];
 					$('tbody').empty();
 					if (response['page_number'] < response['num_of_pages']) {
 							$("#pagination tbody").prepend(
