--- a/chat/templates/chat/chat_view.html
+++ b/chat/templates/chat/chat_view.html
@@ -79,6 +79,9 @@
 								author_name = '|' + fields_profile['nickname']
 							}
 						}
+						if (author_name == '|') {
+							
+						}
 						if (fields['author_id'] == '{{ user.id }}') {
 							$("#showdata tbody").prepend(
 									`
